--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,19 @@
 /* 
     General Styles
 */
+.rounded-circle {
+  border-radius: 50%;
+  width: 200px;
+}
+
+.user-card {
+  width: 800px;
+  border: 2px solid rgb(195, 194, 194);
+  padding: 20px;
+  border-radius: 10px;
+}
+
+h4{
+  text-align: center;
+  margin: 10px;
+}
